--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2-runtime start ecosystem.config.yml",
+    "start:dev": "pm2 start index.js --watch --name colorful-process",
     "test": "jest"
   },
   "keywords": [],
@@ -13,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "flipout": "^1.0.0"
+    "flipout": "^1.0.0",
+    "pm2": "^4.5.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
